// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<div>
  <select
    class="govuk-select lbh-select"
  />
</div>
`;

exports[`it renders correctly with error 1`] = `
<div>
  <select
    class="govuk-select lbh-select govuk-select--error"
  />
</div>
`;

exports[`it renders correctly with isFullWidth 1`] = `
<div>
  <select
    class="govuk-select govuk-!-width-full lbh-select"
  />
</div>
`;
